--- a/Editor2D/Editor2D/Editor2D.vcxproj.filters
+++ b/Editor2D/Editor2D/Editor2D.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="Mouse.h">
       <Filter>Peripherals</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp">
@@ -68,5 +71,15 @@
     <ClCompile Include="Keyboard.cpp">
       <Filter>Peripherals</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Editor2D.rc">
+      <Filter>Файлы ресурсов</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="bezier-spline.ico">
+      <Filter>Файлы ресурсов</Filter>
+    </Image>
   </ItemGroup>
 </Project>
