context reloading is enabled by pressing the escape key

--- a/Editor2D/Editor2D/Editor2D.vcxproj.filters
+++ b/Editor2D/Editor2D/Editor2D.vcxproj.filters
@@ -13,7 +13,7 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Peripherals">
+    <Filter Include="Исходные файлы\Peripherals">
       <UniqueIdentifier>{ac9ae853-572a-4201-8274-25047ef1419e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -40,10 +40,10 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Keyboard.h">
-      <Filter>Peripherals</Filter>
+      <Filter>Исходные файлы\Peripherals</Filter>
     </ClInclude>
     <ClInclude Include="Mouse.h">
-      <Filter>Peripherals</Filter>
+      <Filter>Исходные файлы\Peripherals</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
       <Filter>Файлы заголовков</Filter>
@@ -66,10 +66,10 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="Mouse.cpp">
-      <Filter>Peripherals</Filter>
+      <Filter>Исходные файлы\Peripherals</Filter>
     </ClCompile>
     <ClCompile Include="Keyboard.cpp">
-      <Filter>Peripherals</Filter>
+      <Filter>Исходные файлы\Peripherals</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
